--- a/static/quiz.html
+++ b/static/quiz.html
@@ -93,42 +93,37 @@
     }
     .input-area {
       display: flex;
-      flex-direction: column;
+      align-items: center;
       background: #f9f9f9;
       border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 12px;
+      border-radius: 30px;
+      padding: 8px 12px;
     }
-    .input-area .options {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-    .input-area .option {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .input-area input[type="radio"] {
-      margin: 0;
-    }
-    .input-area label {
+    .input-area textarea {
+      flex: 1;
       font-size: 16px;
+      background: transparent;
+      font-family: 'Roboto', sans-serif;
+      border: none;
+      outline: none;
+      resize: none;
+      height: 50px;
     }
     .input-area button {
       background: #E91E63;
       border: none;
-      border-radius: 8px;
-      padding: 10px;
-      color: white;
-      font-weight: 500;
-      font-size: 14px;
+      border-radius: 50%;
+      width: 36px;
+      height: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 5px;
       cursor: pointer;
-      align-self: flex-end;
     }
-    .input-area button:hover {
-      background-color: #d81b60;
+    .input-area img {
+      width: 20px;
+      height: 20px;
     }
     .nav-buttons {
       display: flex;
@@ -178,7 +173,7 @@
     }
     #waveform {
       display: none;
-      margin-top: 10px;
+      margin-left: 10px;
     }
     #waveform .dot {
       width: 12px;
@@ -223,8 +218,8 @@
         <p id="questionText">Loading question...</p>
       </div>
       <div class="input-area">
-        <div id="options" class="options"></div>
-        <button onclick="submitAnswer()">Submit</button>
+        <textarea id="answerInput" placeholder="Type your answer or use voice..."></textarea>
+        <button onclick="submitAnswer()"><img src="/static/send.png" alt="Send"></button>
         <div id="waveform"><div class="dot"></div></div>
       </div>
       <div id="results" class="results">
@@ -500,23 +495,13 @@
     function displayQuestion() {
       if (currentQuestion < totalQuestions && questions[currentQuestion]) {
         document.getElementById('questionNumber').textContent = currentQuestion + 1;
-        document.getElementById('questionText').textContent = questions[currentQuestion].question;
-        const optionsDiv = document.getElementById('options');
-        optionsDiv.innerHTML = '';
-        questions[currentQuestion].options.forEach((option, index) => {
-          const optionDiv = document.createElement('div');
-          optionDiv.className = 'option';
-          optionDiv.innerHTML = `
-            <input type="radio" name="answer" id="option${index}" value="${option}">
-            <label for="option${index}">${option}</label>
-          `;
-          optionsDiv.appendChild(optionDiv);
-        });
-        speakQuestion(questions[currentQuestion].question);
+        document.getElementById('questionText').textContent = questions[currentQuestion];
+        speakQuestion(questions[currentQuestion]);
+        document.getElementById('answerInput').value = '';
         document.getElementById('results').style.display = 'none';
         document.getElementById('summary-report').style.display = 'none';
         document.getElementById('question-area').style.display = 'block';
-        document.getElementById('options').parentElement.style.display = 'flex';
+        document.getElementById('answerInput').parentElement.style.display = 'flex';
       } else {
         evaluateQuiz();
       }
@@ -524,29 +509,20 @@
 
     function repeatQuestion() {
       if (currentQuestion < totalQuestions && questions[currentQuestion]) {
-        speakQuestion(questions[currentQuestion].question);
+        speakQuestion(questions[currentQuestion]);
       }
     }
 
     function submitAnswer() {
-      const selectedOption = document.querySelector('input[name="answer"]:checked');
-      if (!selectedOption) return;
-      const answer = correctSpelling(selectedOption.value);
-      answers.push({
-        question: questions[currentQuestion].question,
-        answer,
-        options: questions[currentQuestion].options
-      });
+      const answer = document.getElementById('answerInput').value.trim();
+      if (!answer) return;
+      answers.push({ question: questions[currentQuestion], answer: correctSpelling(answer) });
       currentQuestion++;
       displayQuestion();
     }
 
     function skipQuestion() {
-      answers.push({
-        question: questions[currentQuestion].question,
-        answer: 'SKIPPED',
-        options: questions[currentQuestion].options
-      });
+      answers.push({ question: questions[currentQuestion], answer: 'SKIPPED' });
       currentQuestion++;
       displayQuestion();
     }
@@ -567,11 +543,7 @@
     recognition.onresult = function(event) {
       let transcript = event.results[0][0].transcript;
       transcript = correctSpelling(transcript);
-      const options = questions[currentQuestion].options;
-      const closestOption = options.reduce((prev, curr) =>
-        Math.abs(curr.toLowerCase().indexOf(transcript.toLowerCase())) < Math.abs(prev.toLowerCase().indexOf(transcript.toLowerCase())) ? curr : prev
-      );
-      document.querySelector(`input[value="${closestOption}"]`).checked = true;
+      document.getElementById('answerInput').value = transcript;
       submitAnswer();
       isListening = false;
       document.getElementById('waveform').style.display = 'none';
@@ -605,7 +577,7 @@
 
     async function evaluateQuiz() {
       document.getElementById('question-area').style.display = 'none';
-      document.getElementById('options').parentElement.style.display = 'none';
+      document.getElementById('answerInput').parentElement.style.display = 'none';
       document.getElementById('results').style.display = 'none';
       document.getElementById('summary-report').style.display = 'block';
 
@@ -615,12 +587,12 @@
       summaryText += `<strong>Overall Performance</strong><br>`;
 
       for (let i = 0; i < answers.length; i++) {
-        const { question, answer, options } = answers[i];
+        const { question, answer } = answers[i];
         try {
           const response = await fetch('/api/evaluate', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ question, answer, options })
+            body: JSON.stringify({ question, answer })
           });
           const data = await response.json();
           console.log(`Evaluation response for Q${i + 1}:`, data);
@@ -716,6 +688,13 @@
 
       document.getElementById('summary-content').innerHTML = summaryText;
     }
+
+    document.getElementById('answerInput').addEventListener('keydown', function(event) {
+      if (event.key === 'Enter' && !event.shiftKey) {
+        event.preventDefault();
+        submitAnswer();
+      }
+    });
   </script>
 </body>
 </html>
